# alteryx2dbx

./: .gitignore  .pre-commit-config.yaml  README.md  SECURITY_AUDIT.md  makefile  pyproject.toml
src/alteryx2dbx/: __init__.py  cli.py  fixes.py  manifest.py  starter.py
src/alteryx2dbx/dag/: resolver.py
src/alteryx2dbx/document/: config.py  confluence.py  mermaid.py  portfolio.py  report.py
src/alteryx2dbx/generator/: batch_report.py  config.py  config_notebook.py  notebook.py  notebook_v2.py  report.py  utils_notebook.py  (+2 more)
tests/: test_batch.py  test_box_e2e.py  test_box_parser.py  test_cache_validation.py  test_cli.py  test_cli_document.py  test_column_tracker.py  test_config_notebook.py  test_dag.py  test_dag_routing.py  test_disabled_nodes.py  test_e2e.py  test_escaping.py  test_fixes.py  test_lessons.py  test_manifest.py  test_models.py  test_notebook_v2.py  test_parser.py  test_plugins.py  test_registry_prefix.py  test_schema_drift.py  test_traceability.py  test_transpiler_emit.py  test_transpiler_expanded.py  test_transpiler_parse.py  test_unpacker.py  test_utils_notebook.py  test_validator_v2.py
tests/test_document/: test_config.py  test_confluence.py  test_mermaid.py  test_portfolio.py  test_report.py
tests/test_handlers/: test_advanced_formula.py  test_box_input.py  test_box_output.py  test_data_cleansing.py  test_easy_handlers.py  test_filter.py  test_formula.py  test_input_data.py  test_io_handlers.py  test_join.py  test_output_data.py  test_parse_handlers.py  test_select.py  test_sort.py  test_summarize.py  test_transform_handlers.py  test_union.py
(+46 files in other folders)
